trying to fix iPad portrait alignment issue

--- a/views/ipad_portrait.sass
+++ b/views/ipad_portrait.sass
@@ -76,12 +76,10 @@ h1
       width: 340px
       margin-left: 33px
       padding: 0 13px
-      left: 0
+      float: left
       
     #item2, #item4, #item6
-      position: absolute
-      margin-left: 386px
       width: 340px
       padding: 0 13px
-      top: 0
-      left: 0
+      display: inline
+      float: right
